--- a/src/SwaggerWcf.Test.Service/SwaggerWcf.Test.Service.csproj
+++ b/src/SwaggerWcf.Test.Service/SwaggerWcf.Test.Service.csproj
@@ -44,6 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.Web.DynamicData" />
@@ -71,9 +74,11 @@
   <ItemGroup>
     <Compile Include="AuthorService.cs" />
     <Compile Include="BaseService.cs" />
+    <Compile Include="Converters\LocaleModelListJsonConverter.cs" />
     <Compile Include="Data\Author.cs" />
     <Compile Include="Data\BaseEntity.cs" />
     <Compile Include="Data\Book.cs" />
+    <Compile Include="Data\LocaleModel.cs" />
     <Compile Include="Data\Language.cs" />
     <Compile Include="Data\Store.cs" />
     <Compile Include="IAuthorService.cs" />
@@ -91,6 +96,7 @@
     <Compile Include="WCF\WebServiceHostFactoryEx.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
